fixing color hexcode

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         color: white;
       }
       .attribution a {
-        color: limegreen;
+        color: seagreen;
       }
     </style>
   </head>
